@@ -1,3 +1,7 @@
+2016-01-05  Mike Frysinger  <vapier@gentoo.org>
+
+	* argv.c (dupargv): Replace strlen/xmalloc/strcpy with xstrdup.
+
 2015-12-28  Patrick Palka  <ppalka@gcc.gnu.org>
 
 	* crc32.c: In the documentation, don't refer to GDB's
